--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 		<artifactId>maven-war-plugin</artifactId>
 		<version>2.5</version>
 	    </plugin>
+			<plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>1.1.3</version>
+      </plugin>
 	</plugins>
     </build>
 </project>
