--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,18 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 <artifactId>jersey-container-servlet</artifactId>
 <version>2.13</version>
 </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+  <dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-core</artifactId>
+    <version>1.3</version>
+    <scope>test</scope>
+  </dependency>
 </dependencies>
 <build>
 <finalName>guava</finalName>
