--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /Guava/dist/
 /Guava/nbproject/private/
+/Guava/HibernateTest/build/
+/Guava/HibernateTest/dist/
+/Guava/HibernateTest/nbproject/private/
