--- a/pom.xml
+++ b/pom.xml
@@ -1,90 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-<modelVersion>4.0.0</modelVersion>
-<groupId>guava</groupId>
-<artifactId>guava</artifactId>
-<name>guava</name>
-<packaging>war</packaging>
-<version>0.0.1-SNAPSHOT</version>
-<url>http://maven.apache.org</url>
-<properties>
-<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-</properties>
-<dependencies>
-<dependency>
-<groupId>javax.servlet</groupId>
-<artifactId>javax.servlet-api</artifactId>
-<version>3.1.0</version>
-<scope>provided</scope>
-</dependency>
-<dependency>
-<groupId>org.glassfish.jersey.containers</groupId>
-<artifactId>jersey-container-servlet-core</artifactId>
-<version>2.13</version>
-</dependency>
-<dependency>
-<groupId>org.glassfish.jersey.containers</groupId>
-<artifactId>jersey-container-servlet</artifactId>
-<version>2.13</version>
-</dependency>
-    <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  <dependency>
-    <groupId>org.hamcrest</groupId>
-    <artifactId>hamcrest-core</artifactId>
-    <version>1.3</version>
-    <scope>test</scope>
-  </dependency>
-</dependencies>
-<build>
-<finalName>guava</finalName>
-<plugins>
-	<plugin>
-    	<groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-dependency-plugin</artifactId>
-      <version>2.3</version>
-      <executions>
-          <execution>
-              <phase>package</phase>
-              <goals><goal>copy</goal></goals>
-              <configuration>
-                  <artifactItems>
-                      <artifactItem>
-                          <groupId>com.github.jsimone</groupId>
-                          <artifactId>webapp-runner</artifactId>
-                          <version>8.5.11.2</version>
-                          <destFileName>webapp-runner.jar</destFileName>
-                      </artifactItem>
-                  </artifactItems>
-              </configuration>
-          </execution>
-      </executions>
-  </plugin>
-	<plugin>
+	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>guava</groupId>
+    <artifactId>guava</artifactId>
+    <name>guava</name>
+    <packaging>war</packaging>
+    <version>0.0.1-SNAPSHOT</version>
+    <url>http://maven.apache.org</url>
+    <properties>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <dependencies>
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.1.0</version>
+	    <scope>provided</scope>
+	</dependency>
+	<dependency>
+	    <groupId>org.glassfish.jersey.containers</groupId>
+	    <artifactId>jersey-container-servlet-core</artifactId>
+	    <version>2.13</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.glassfish.jersey.containers</groupId>
+	    <artifactId>jersey-container-servlet</artifactId>
+	    <version>2.13</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.glassfish.jersey.media</groupId>
+	    <artifactId>jersey-media-json-jackson</artifactId>
+	    <version>2.13</version>
+	</dependency>
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>org.hamcrest</groupId>
+	    <artifactId>hamcrest-core</artifactId>
+	    <version>1.3</version>
+	    <scope>test</scope>
+	</dependency>
+    </dependencies>
+    <build>
+	<finalName>guava</finalName>
+	<plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-dependency-plugin</artifactId>
+		<version>2.3</version>
+		<executions>
+		    <execution>
+			<phase>package</phase>
+			<goals>
+			    <goal>copy</goal>
+			</goals>
+			<configuration>
+			    <artifactItems>
+				<artifactItem>
+				    <groupId>com.github.jsimone</groupId>
+				    <artifactId>webapp-runner</artifactId>
+				    <version>8.5.11.2</version>
+				    <destFileName>webapp-runner.jar</destFileName>
+				</artifactItem>
+			    </artifactItems>
+			</configuration>
+		    </execution>
+		</executions>
+	    </plugin>
+	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-compiler-plugin</artifactId>
 		<version>3.2</version>
 		<configuration>
-			<source>1.7</source>
-			<target>1.7</target>
+		    <source>1.7</source>
+		    <target>1.7</target>
 		</configuration>
-	</plugin>
-	<plugin>
+	    </plugin>
+	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-war-plugin</artifactId>
 		<version>2.5</version>
-	</plugin>
-	<plugin>
+	    </plugin>
+	    <plugin>
 		<groupId>com.heroku.sdk</groupId>
 		<artifactId>heroku-maven-plugin</artifactId>
 		<version>1.1.3</version>
-	</plugin>
-</plugins>
-</build>
+	    </plugin>
+	</plugins>
+    </build>
 </project>
